5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1799_2578.log
== SUBMITION (2019-07-02 07:11:36) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite matricula: ")))
g = 0 
for i in range(size(vet)):
	if(vet[i]%2 !=0):
		g = g+1
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2 !=0):
		v[h]= vet[i]
		h = h + 1
print(v)
-- EXECUTION TIME:
1.22164
-- TEST CASE 1:
---- input:
[120,130,140,150,160,170,180,190,201]
---- correct output:
[120 130 140 150 160 170 180 190]
---- user output:
[201]
-- TEST CASE 2:
---- input:
[131,180]
---- correct output:
[180]
---- user output:
[131]
-- TEST CASE 3:
---- input:
[333,567,899,214]
---- correct output:
[214]
---- user output:
[333 567 899]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:12:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite matricula: ")))
g = 0 
for i in range(size(vet)):
	if(vet[i]%2 =0):
		g = g+1
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%2 =0):
		v[h]= vet[i]
		h = h + 1
print(v)
-- EXECUTION TIME:
0.883946
-- ERROR:
  File "/home/codebench/codes/1799/2578/main.py", line 5
    if(vet[i]%2 =0):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
